// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

03/06/2010
	r223 [pakpil]
	* Added GC_VENOMIMPRESS, GC_HALLUCINATIONWALK and GC_ANTIDOTE skills.
	* Minor fix in new packet clif_tradeadditem that wasn't showing zeny.
	* Added 3 extra seconds per GC_RESEARCHNEWPOISON level bonus in ASC_EDP.
	* Minor fix in some status changes used as cooldown that shouldn't be debuffed.
	* Minor fix in GC_COUNTERSLASH and GC_WEAPONCRUSH that should show skill fail every time you try to use these skills.

03/03/2010
	r222 [pakpil]
	* Minor fix in trade and gstorage packets to avoid conflicts to lastest clients.
	* Added GC_VENOMPRESSURE skill.
	* Fixed clif_parse_ProduceMix. Bug report 224.
	* Improved Runes cooldown control, adjusted to the official one.
	* Minor fix in SC__SHADOWFORM. Moved to a place between freeblock_lock/freeblock_unlock to avoid conflict.

03/02/2010
	r221 [pakpil]
	* Fixed clif_guildstorageitemadded packet that was malfuntioning when you put an item in the storage with lastest client.

03/02/2010
	r220 [pakpil]
	* Added new clif_tradeadditem packet. 0xe9 -> 0x80f.

02/28/2010
	r219 [Rytech]
	*Fixed the gm_all_skill config setting. You can now safely use it.
	-Enableing this setting will give you access ONLY to all 1st and 2nd class skills.
	-You can get 3rd class skills too, but only for the 3rd job your playing as.
	-Thankyou Pakpil for the help. =D

02/28/2010
	r218 [pakpil]
	* Fixed pc_skillup and pc_jobchange that were malfunctioning. Bug report 193.

02/28/2010
	r217 [Jobbie]
	* Mado Gear is usable without Madolicense skill upgraded. Without the license your movement speed will be 50%.
	- When in Mado Gear Blacksmith and Mastersmith skills are unusable.
	* Cannot use the skill Return to El Dicaste when mounted in Mado.
	* Some clean up to the state "ridingwarg" and "warg".
	* Minor clean up to skill Cross Ripper Slasher avoiding redundant sc checking.