@@ -3507,6 +3507,30 @@ int skill_castend_damage_id (struct block_list* src, struct block_list *bl, int 
 		skill_attack(BF_WEAPON,src,src,bl,skillid,skilllv,tick,flag);
 		break;
 
+	case GC_DARKILLUSION:
+		{
+			short x, y;
+			short dir = map_calc_dir(src,bl->x,bl->y);
+
+			if( dir > 4 ) x = -1;
+			else if( dir > 0 && dir < 4 ) x = 1;
+			else x = 0;
+			if( dir < 3 || dir > 5 ) y = -1;
+			else if( dir > 3 && dir < 5 ) y = 1;
+			else y = 0;
+
+			if( unit_movepos(src, bl->x+x, bl->y+y, 1, 1) )
+			{
+				clif_slide(src,bl->x+x,bl->y+y);
+				clif_fixpos(src); // the official server send these two packts.
+				skill_attack(BF_WEAPON,src,src,bl,skillid,skilllv,tick,flag);
+				if( rand()%100 < 4 * skilllv )
+					skill_castend_damage_id(src,bl,GC_CROSSIMPACT,skilllv,tick,flag);
+			}
+
+		}
+		break;
+
 	case GC_WEAPONCRUSH:
 		skill_castend_nodamage_id(src,bl,skillid,skilllv,tick,flag);
 		break;
@@ -3522,6 +3546,17 @@ int skill_castend_damage_id (struct block_list* src, struct block_list *bl, int 
 		{
 			skill_attack(BF_WEAPON,src,src,bl,skillid,skilllv,tick,flag);
 			status_change_end(src,SC_ROLLINGCUTTER,-1);
+		}
+		break;
+
+	case GC_PHANTOMMENACE:
+		if( flag&1 )
+		{
+			sc = status_get_sc(bl);
+			if(sc && (sc->option&(OPTION_HIDE|OPTION_CLOAK|OPTION_CHASEWALK) || sc->data[SC__INVISIBILITY]) )
+			{
+				skill_attack(BF_WEAPON,src,src,bl,skillid,skilllv,tick,flag);
+			}
 		}
 		break;
 
@@ -6605,6 +6640,13 @@ int skill_castend_nodamage_id (struct block_list *src, struct block_list *bl, in
 			status_change_end(bl,SC_OBLIVIONCURSE,-1);
 		break;
 
+	case GC_PHANTOMMENACE:
+		clif_skill_damage(src,bl,tick, status_get_amotion(src), 0, -30000, 1, skillid, skilllv, 6);
+		clif_skill_nodamage(src,bl,skillid,skilllv,1);
+		map_foreachinrange(skill_area_sub,src,skill_get_splash(skillid,skilllv),BL_CHAR,
+			src,skillid,skilllv,tick,flag|BCT_ENEMY|1,skill_castend_damage_id);
+		break;
+		
 	case GC_HALLUCINATIONWALK:
 		{
 			int heal = status_get_max_hp(bl) * 10 / 100;
@@ -8330,6 +8372,18 @@ int skill_castend_pos2(struct block_list* src, int x, int y, int skillid, int sk
 		map_foreachinarea(skill_area_sub,src->m,x-i,y-i,x+i,y+i,BL_CHAR,
 			src,skillid,skilllv,tick,flag|BCT_ENEMY|1,
 			skill_castend_damage_id);
+		break;		
+
+	case GC_POISONSMOKE:
+		if( !(sc && sc->data[SC_POISONINGWEAPON]) )
+		{
+			if( sd )
+				clif_skill_fail(sd,skillid,0x20,0,0);
+			return 0;
+		}
+		clif_skill_damage(src,src,tick,status_get_amotion(src),0,-30000,1,skillid,skilllv,6);
+		skill_unitsetting(src, skillid, skilllv, x, y, flag);
+		status_change_end(src,SC_POISONINGWEAPON,-1);
 		break;
 
 	case AB_EPICLESIS:
@@ -8970,6 +9024,14 @@ struct skill_unit_group* skill_unitsetting (struct block_list *src, short skilli
 		break;
 		}
 		break;
+
+	case GC_POISONSMOKE:
+		if( !(sc && sc->data[SC_POISONINGWEAPON]) )
+			return NULL;
+		val1 = sc->data[SC_POISONINGWEAPON]->val2;
+		limit = 4000 + 2000 * skilllv;
+		break;
+
 
 	case WM_REVERBERATION:
 		interval = limit;
@@ -9780,6 +9842,17 @@ int skill_unit_onplace_timer (struct skill_unit *src, struct block_list *bl, uns
 			sg->unit_id = UNT_USED_TRAPS;
 			//clif_changetraplook(&src->bl, UNT_FIREPILLAR_ACTIVE);
 			sg->limit=DIFF_TICK(tick,sg->tick)+1500;
+			break;
+
+		case UNT_POISONSMOKE:
+			if( battle_check_target(ss,bl,BCT_ENEMY) > 0 )
+			{
+				if( !(tsc && tsc->data[sg->val1]) )
+				{
+					if( rand()%100 < 20 )
+						sc_start(bl,sg->val1,100,sg->skill_lv,skill_get_time(GC_POISONINGWEAPON,sg->skill_lv));
+				}
+			}
 			break;
 
 		case UNT_EPICLESIS:
@@ -10800,6 +10873,14 @@ int skill_check_condition_castbegin(struct map_session_data* sd, short skill, sh
 		if(!(sc && sc->data[SC_COMBO] && sc->data[SC_COMBO]->val1 == GC_WEAPONBLOCKING) )
 		{
 			clif_skill_fail(sd, skill, 0x1f, 0, 0);
+			return 0;
+		}
+		break;
+	case GC_POISONSMOKE:
+		if( !(sc && sc->data[SC_POISONINGWEAPON]) )
+		{
+			if( sd )
+				clif_skill_fail(sd,skillid,0x20,0,0);
 			return 0;
 		}
 		break;
